--- a/6.3 CSS Box Model/index.html
+++ b/6.3 CSS Box Model/index.html
@@ -6,6 +6,34 @@
   <title>CSS Box Model</title>
   <style>
     /* Write your CSS code here */
+    div {
+      height: 200px;
+      width: 200px;
+    }
+
+    #div1 {
+      background-color: cadetblue;
+      border: 10px solid black;
+      padding: 20px;
+    }
+
+    p {
+      margin: 0px;
+    }
+
+    #div2 {
+      background-color: gold;
+      border: 20px solid black;
+      border-width: 20px 10px;
+      margin-left: 260px;
+    }
+
+    #div3 {
+      background-color: indianred;
+      border: 10px solid black;
+      margin-left: 40px;
+    }
+
 
   </style>
 </head>
@@ -28,6 +56,15 @@ Hint: Use the CSS inspector in Chrome.
 8. Set the 3rd div to have a 10px border 
 9. Set the margins for the divs so that each box corner touches the other. (See the goal image)
 -->
+
+<div id="div1">
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In
+    id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus
+    dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.</p>
+</div>
+<div id="div2"></div>
+<div id="div3"></div>
+
 
 </body>
 
