Complete poster and CSS specificity activities

--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -14,3 +14,25 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+  <div>
+    <img src="./assets/images/Screenshot 2023-05-26 at 4.27.49 PM.png" alt="person watching sunset"/>
+    <h1>optimism</h1>
+    <p>Nobody can ruin your day because you're probably going to ruin it yourself</p>
+  </div>
+</body>
+</html>
