Complete float assignment

--- a/8.1 CSS Float/index.html
+++ b/8.1 CSS Float/index.html
@@ -20,16 +20,27 @@
     }
 
     .cat {
+      float: left;
       background-color: aquamarine;
     }
 
     .dog {
+      float: right;
       background-color: coral;
     }
 
     footer {
+      clear: both;
       text-align: center;
       background-color: blueviolet;
+    }
+
+    img[src="cat.jpeg"] {
+      float: left;
+    }
+
+    img[src="dog.jpeg"] {
+      float: left;
     }
   </style>
 </head>
