Fix img selector

--- a/8.1 CSS Float/index.html
+++ b/8.1 CSS Float/index.html
@@ -35,11 +35,7 @@
       background-color: blueviolet;
     }
 
-    img[src="cat.jpeg"] {
-      float: left;
-    }
-
-    img[src="dog.jpeg"] {
+    img {
       float: left;
     }
   </style>
