--- a/9.1 Flex Direction/index.html
+++ b/9.1 Flex Direction/index.html
@@ -14,6 +14,12 @@
       color: white;
       border: 5px solid gold;
       display: flex;
+      flex-direction: column;
+      width: 3rem;
+    }
+
+    div > div {
+      flex-basis: 100px;
     }
 
     /*
