--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -17,7 +17,33 @@
     }
 
     .pricing-plan {
-      background-color: ;
+      background-color: #F8F6F4;
+      border-radius: 2px;
+      flex-basis: 16rem
+    }
+
+    .plan-title {
+      margin-top: 10px;
+      text-align: center;
+      font-weight: 600;
+    }
+
+    .plan-price {
+      margin-top: 10px;
+      text-align: center;
+      font-weight: 600;
+      font-size: 1.5rem;
+    }
+
+    ul {
+      padding-left: 0;
+    }
+
+    li {
+      margin: 10px;
+      text-align: center;
+      font-size: .7rem;
+      list-style-type: none
     }
 
     /* Hint: What can you do with a media query and flexbox? */
