Change height of div viewport to 100vh

--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -12,9 +12,10 @@
     }
 
     .pricing-container {
-      align-items: center;
       display: flex;
       justify-content: center;
+      align-items: center;
+      height: 100vh;
       gap: 2rem
     }
 
