--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -20,14 +20,16 @@
     }
 
     .pricing-plan {
+      flex: 1;
       text-align: center;
+      max-width: 400px;
       background-color: #F8F6F4;
-      border-radius: 2px;
-      flex-basis: 16rem
+      border-radius: 5px;
+      flex-basis: 16rem;
+      padding: 20px;
     }
 
     .plan-title {
-      margin-top: 10px;
       font-weight: 600;
     }
 
@@ -38,18 +40,18 @@
     }
 
     ul {
-      padding-left: 0;
+      padding: 0;
+      margin: 0;
     }
 
     li {
       margin: 10px;
       font-size: .7rem;
-      list-style-type: none
+      list-style: none
     }
 
     button {
       font-size: 10px;
-      margin-bottom: 10px;
       height: 1.3rem;
       width: 53px;
       background-color: orange;
@@ -61,9 +63,8 @@
     /* Hint: What can you do with a media query and flexbox? */
     @media (max-width: 1250px) {
       .pricing-container {
-        align-items: center;
-        display: flex;
         flex-direction: column;
+        height: 100%;
       }
 
       .pricing-plan {
