--- a/10.0 Display Grid/index.html
+++ b/10.0 Display Grid/index.html
@@ -7,6 +7,25 @@
     /* Write your code here */
     /* Each square should be 100px by 100px */
     /* My colours for white: #f0d9b5, black: #b58863 */
+
+    .container {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 10px;
+    }
+
+    .white {
+      width: 100px;
+      height: 100px;
+      background-color: black;
+    }
+
+    .black {
+      width: 100px;
+      height: 100px;
+      background-color: white;
+    }
   </style>
 </head>
 
