Add container and divs

--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -24,6 +24,10 @@
 
 <body>
   <!-- Write your HTML here -->
+  <div class="container">
+    <div></div>
+    <div></div>
+  </div>
 </body>
 
 </html>
