--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -27,9 +27,16 @@
     }
  
     .container {
+      display: grid;
+      grid-template-columns: 320px 198px 153px 50px;
+      grid-template-rows: 414px 130px 155px 20px;
       width: 748px;
       height: 748px;
       background-color: black;
+    }
+
+    .red {
+      background-color: red;
     }
   </style>
 </head>
@@ -38,6 +45,15 @@
   <!-- Write your HTML here -->
   <div class="outer-box">
     <div class="container">
+      <div class="red"></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
       <div></div>
       <div></div>
       <div></div>
