--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -28,6 +28,7 @@
  
     .container {
       display: grid;
+      gap: 9px;
       grid-template-columns: 320px 198px 153px 50px;
       grid-template-rows: 414px 130px 155px 20px;
       width: 748px;
@@ -38,6 +39,18 @@
     .red {
       background-color: red;
     }
+
+    .white {
+      background-color: #F0F1EC;
+    }
+
+    .blue {
+      background-color: blue;
+    }
+
+    .yellow {
+      background-color: #F9D01E;
+    }
   </style>
 </head>
 
@@ -46,16 +59,19 @@
   <div class="outer-box">
     <div class="container">
       <div class="red"></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="white"></div>
+      <div class="white"></div>
+      <div class="white"></div>
+      <div class="white"></div>
+      <div class="white"></div>
+      <div class="white"></div>
+      <div class="blue"></div>
+      <div class="white"></div>
+      <div class="white"></div>
+      <div class="white"></div>
+      <div class="white"></div>
+      <div class="white"></div>
+      <div class="yellow"></div>
       <div></div>
     </div>
   </div>
