--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -51,6 +51,10 @@
     .yellow {
       background-color: #F9D01E;
     }
+
+    .black {
+      background-color: #232629;
+    }
   </style>
 </head>
 
@@ -72,7 +76,8 @@
       <div class="white"></div>
       <div class="white"></div>
       <div class="yellow"></div>
-      <div></div>
+      <div class="black"></div>
+      <div class="white"></div>
     </div>
   </div>
 </body>
