Revert all grid pieces to white

--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -48,13 +48,6 @@
       background-color: blue;
     }
 
-    .yellow {
-      background-color: #F9D01E;
-    }
-
-    .black {
-      background-color: #232629;
-    }
   </style>
 </head>
 
@@ -69,14 +62,14 @@
       <div class="white"></div>
       <div class="white"></div>
       <div class="white"></div>
-      <div class="blue"></div>
       <div class="white"></div>
       <div class="white"></div>
       <div class="white"></div>
       <div class="white"></div>
       <div class="white"></div>
-      <div class="yellow"></div>
-      <div class="black"></div>
+      <div class="white"></div>
+      <div class="white"></div>
+      <div class="white"></div>
       <div class="white"></div>
     </div>
   </div>
