--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -48,6 +48,22 @@
       background-color: blue;
     }
 
+    .row1 {
+      grid-column-start: span 3;
+    }
+
+    .row2 {
+      grid-column-start: span 2;
+    }
+
+    .row3 {
+      grid-column-start: span 2;
+      margin-top: -9px;
+    }
+
+    .top {
+      margin-top: -9px;
+    }
   </style>
 </head>
 
@@ -56,12 +72,12 @@
   <div class="outer-box">
     <div class="container">
       <div class="red"></div>
+      <div class="white row1"></div>
       <div class="white"></div>
-      <div class="white"></div>
-      <div class="white"></div>
-      <div class="white"></div>
-      <div class="white"></div>
-      <div class="white"></div>
+      <div class="white row2"></div>
+      <div class="blue"></div>
+      <div class="white top"></div>
+      <div class="white row3"></div>
       <div class="white"></div>
       <div class="white"></div>
       <div class="white"></div>
