Complete Mondrian painting

--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -46,10 +46,19 @@
 
     .blue {
       background-color: blue;
+      margin-bottom: 10px;
     }
 
     .row1 {
       grid-column-start: span 3;
+    }
+
+    .yellow {
+      background-color: #F9D01E;
+    }
+
+    .black {
+      background-color: #232629;
     }
 
     .row2 {
@@ -62,6 +71,10 @@
     }
 
     .top {
+      margin-top: -9px;
+    }
+
+    .last {
       margin-top: -9px;
     }
   </style>
@@ -80,13 +93,9 @@
       <div class="white row3"></div>
       <div class="white"></div>
       <div class="white"></div>
-      <div class="white"></div>
-      <div class="white"></div>
-      <div class="white"></div>
-      <div class="white"></div>
-      <div class="white"></div>
-      <div class="white"></div>
-      <div class="white"></div>
+      <div class="yellow"></div>
+      <div class="black"></div>
+      <div class="white last"></div>
     </div>
   </div>
 </body>
