Remove outer div and change body

--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -19,11 +19,13 @@
     HINT: Remember you can't change the properties of grid lines.
     But grid lines are transparent!
     */
-    .outer-box {
+    body {
       display: flex;
-      height: 100vh;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
     }
  
     .container {
