--- a/16 DOM/index.html
+++ b/16 DOM/index.html
@@ -7,7 +7,7 @@
   <title>My Website</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body onload="alert('Hello')">
+<body onload="alert('Hello');">
   <h1>Hello</h1>
 </body>
 </html>
