--- a/16 DOM/index.html
+++ b/16 DOM/index.html
@@ -7,7 +7,10 @@
   <title>My Website</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body onload="alert('Hello');">
+<body>
   <h1>Hello</h1>
+
+  <script src="index.js"></script>
+  
 </body>
 </html>
