--- a/17 Dicee Challenge/dicee.html
+++ b/17 Dicee Challenge/dicee.html
@@ -27,7 +27,7 @@
 
   </body>
 
-  <link rel="stylesheet" href="./index.js">
+  <script src="./index.js"></script>
   <footer>
     www 🎲 App Brewery 🎲 com
   </footer>
